PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add winners-and-losers sub-command for providing some first/last place finish stats
pts-core: Don't pass files greater than ~50MB to the result parser as likely too big to parse and invalid data like lots of warnings/errors from test
pts-core: Restructured test result parser
pts-core: Dropping of some deprecated checks

Phoronix Test Suite 7.0.0 Milestone 2
23 January 2017

pts-core: Indicate HIB/LIB result proportion when dumping results as CSV
pts-core: Introduce new view of system software/hardware details on test run and system-info command
pts-core: Drop detailed-system-info sub-command now that system-info is more verbose
pts-core: Eliminate pts_test_downloads_nye_XmlReader
pts-core: Eliminate pts_parse_results_nye_XmlReader abstraction
pts-core: A lot of cleanups / reworking of XML parsing in various components
pts-core: Cleanup phoronix-test-suite list-test-usage
phodevi: Fix for hanging Windows client when requesting disk mount options
phodevi: Don't rely upon X.Org DDX driver logic for determining GPU frequency since it's not portable to Wayland or with -modesetting DDX
phodevi: Add microcode version reporting on Linux

Phoronix Test Suite 7.0.0 Milestone 1
12 January 2017

pts-core: Add estimate-run-time sub-command for estimating test/suite/result-file run length
pts-core: More external dependency coverage for BSDs
pts-core: Cleanup PTS_USER_LOCK / run-lock handling
pts_Graph: Add "Ryzen" product string to AMD's coloring
pts_Graph: Add "Pentium" product string to Intel's coloring
pts_Graph: Add option to disable color branding
phoromatic: Set by default for SQLite database WAL journal mode / NORMAL synchronous
phoromatic: Report status updates more often

Phoronix Test Suite 6.8.0-Tana
6 December 2016

phoromatic: allow clearing warnings/errors of a system from the systems page
phodevi: Rearrange ATI/AMD graphics checks

Phoronix Test Suite 6.8.0 Milestone 3
28 November 2016
