@@ -319,13 +319,14 @@ class pts_test_profile extends pts_test_profile_parser
 
 		return $supported;
 	}
-	public static function generate_comparison_hash($test_identifier, $arguments, $attributes = null, $version = null, $raw_output = true)
+	public static function generate_comparison_hash($test_identifier, $arguments, $attributes = null, $version = null, $result_scale = null, $raw_output = true)
 	{
 		$hash_table = array(
 		$test_identifier,
 		trim($arguments),
 		trim($attributes),
-		$version
+		trim($version),
+		trim($result_scale)
 		);
 
 		return sha1(implode(',', $hash_table), $raw_output);
