@@ -30,6 +30,7 @@
 			<xs:element name="ResultScale" type="xs:string" minOccurs="0" maxOccurs="1" />
 			<xs:element name="ResultProportion" type="xs:string" minOccurs="0" maxOccurs="1" />
 			<xs:element name="ResultPrecision" type="xs:string" minOccurs="0" maxOccurs="1" />
+			<xs:element name="AppendToArgumentsDescription" type="xs:string" minOccurs="0" maxOccurs="1" />
 			<xs:element name="FileFormat" type="xs:string" minOccurs="0" maxOccurs="1" />
 		</xs:sequence>
 		</xs:complexType>
